# android-opencc

./: build.gradle  gradle.properties
app/: build.gradle
lib-opencc-android/: CMakeLists.txt  build.gradle
lib-opencc-android/src/main/cpp/: Application.mk  chineseconverter.cpp
lib-opencc-android/src/main/cpp/opencc/: BinaryDict.cpp  BinaryDict.hpp  CMakeLists.txt  Common.hpp  Config.cpp  Config.hpp  Conversion.cpp  Conversion.hpp  ConversionChain.cpp  ConversionChain.hpp  Converter.cpp  Converter.hpp  DartsDict.cpp  DartsDict.hpp  Dict.cpp  Dict.hpp  DictEntry.cpp  DictEntry.hpp  DictGroup.cpp  DictGroup.hpp  Exception.hpp  Lexicon.hpp  MaxMatchSegmentation.cpp  MaxMatchSegmentation.hpp  Optional.hpp  PhraseExtract.cpp  PhraseExtract.hpp  Segmentation.hpp  Segments.hpp  SerializableDict.hpp  SimpleConverter.cpp  SimpleConverter.hpp  TextDict.cpp  TextDict.hpp  UTF8StringSlice.hpp  UTF8Util.cpp  UTF8Util.hpp  opencc.h
lib-opencc-android/src/main/java/com/zqc/opencc/android/lib/: ChineseConverter.java
